# xdrum

./: CMakeLists.txt  DRUMS.GUS  DRUMS.WIN  DRUMS.org  LICENSE  Makefile  README  alsadrum.c  drum.h  files.c  files.h  gdrum.h  gusload.c  gusload.h  play.h  sbdrum.c  widget.c  xdrum.c  xdrum.h  xdrum_imgui.c  xdrum_imgui.cpp
SRC/: 3MU.C  3MU.H  ARGS.C  ARGS_PRO.H  BANNER.H  CMakeLists.txt  CONSOLE.H  CONVAUD.H  DATA.H  DEBUG.C  DEBUG.H  DRUM.H  EG.C  EG_PROTO.H  GUI.CPP  GUI.H  IO.C  IO2.C  IO_PROTO.H  KEYBOARD.H  MISC.C  MISC_PRO.H  My3mu.cpp  My3mu.h  OBJECT.CPP  OBJECT.H  OPTS.H  PARSE.C  PARSE.H  PARSE2.C  PARSE_PR.H  PLAYER.B2  PLAYER.BAK  PREP.C  PREP2.C  PREP_PRO.H  Player.cpp  Player.h  README  RESOURCE.H  (+27 more)
SRC/WINDRUM/: Drums.ini  WINDRUM.DSP  WINDRUM.DSW  WINDRUM.NCB  WINDRUM.PLG  WINDRUM.opt  WINDRUM.sln  windrum.vcxproj
linn/: LinnDrum.txt
samples/: clap1  clap2  cowb1  dkick2  hihat1  kick1  kick2  lokick  losnare  maracas  ohihat  rchick  rclap  rclick  rconga  ride1  rim1  rim2  rrim  rsnare  snare1  snare2  tom1
xbm/: ffw.bit  play.bit  record.bit  rew.bit  stop.bit  title.bit  zoom_in.bit  zoom_out.bit
